[gd_scene load_steps=3 format=3 uid="uid://sliaarrkymdo"]

[ext_resource type="Script" uid="uid://6yelginq6gfe" path="res://Scripts/UI/score_card_ui.gd" id="1_3x83p"]
[ext_resource type="Theme" uid="uid://yij15afv8bdr" path="res://Resources/UI/scorecard_theme.tres" id="1_pm5im"]

[node name="ScoreCardUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_pm5im")
script = ExtResource("1_3x83p")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -7.0
offset_top = -1.0
offset_right = 312.0
offset_bottom = 295.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -6.0
offset_right = 311.0
offset_bottom = 294.0
color = Color(1, 1, 0.980392, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 388.0
offset_bottom = 338.0

[node name="UpperVBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="UpperSectionLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer"]
layout_mode = 2
text = "Upper Section       "

[node name="UpperGridContainer" type="GridContainer" parent="HBoxContainer/UpperVBoxContainer"]
layout_mode = 2

[node name="OnesContainer" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="OnesButton" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/OnesContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Ones:"

[node name="OnesLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/OnesContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="TwosContainer" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="TwosButton" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/TwosContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Twos:"

[node name="TwosLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/TwosContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="ThreesContainer" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="ThreesButton" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/ThreesContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Threes:"

[node name="ThreesLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/ThreesContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="FoursContainer" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="FoursButton" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/FoursContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fours:"

[node name="FoursLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/FoursContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="FivesContainer" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="FivesButton" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/FivesContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fives:"

[node name="FivesLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/FivesContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="SixesContainer" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="SixesButton" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/SixesContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sixes:"

[node name="SixesLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/SixesContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="UpperSubTotal" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="UppersubLabel" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/UpperSubTotal"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sub Ttl:"

[node name="UppersubButton" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/UpperSubTotal"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="UpperBonus" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="UpperBonus" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/UpperBonus"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bonus:"

[node name="UpperBonusLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/UpperBonus"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="UpperTotal" type="HBoxContainer" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer"]
layout_mode = 2

[node name="UpperTotalButton" type="Button" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/UpperTotal"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total:"

[node name="UpperTotalLabel" type="Label" parent="HBoxContainer/UpperVBoxContainer/UpperGridContainer/UpperTotal"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="LowerVBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LowerSecionLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer"]
layout_mode = 2
text = "Lower Section"

[node name="LowerGridContainer" type="GridContainer" parent="HBoxContainer/LowerVBoxContainer"]
layout_mode = 2

[node name="Threeofakind" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="ThreeofakindButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Threeofakind"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "3 of a kind:"

[node name="ThreeofakindLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Threeofakind"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="Fourofakind" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="FourofakindButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Fourofakind"]
layout_mode = 2
size_flags_horizontal = 3
text = "4 of a kind:"

[node name="FourofakindLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Fourofakind"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="Fullhouse" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="FullhouseButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Fullhouse"]
layout_mode = 2
size_flags_horizontal = 3
text = "Full House:"

[node name="FullhouseLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Fullhouse"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="Smallstraight" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="SmallstraightButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Smallstraight"]
layout_mode = 2
size_flags_horizontal = 3
text = "S Straight:"

[node name="SmallstraightLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Smallstraight"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="Largestraight" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="LargestraightButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Largestraight"]
layout_mode = 2
size_flags_horizontal = 3
text = "L Straight:"

[node name="LargestraightLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Largestraight"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="Chance" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="ChanceButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Chance"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chance:"

[node name="ChanceLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Chance"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="Yahtzee" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="YahtzeeButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Yahtzee"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yahtzee:"

[node name="YahtzeeLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/Yahtzee"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="YahtzeeBonus" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="YahtzeeBonusButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/YahtzeeBonus"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bonus:"

[node name="YahtzeeBonusLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/YahtzeeBonus"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="LowerTotal" type="HBoxContainer" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer"]
layout_mode = 2

[node name="LowerTotalButton" type="Button" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/LowerTotal"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lower  Total:"

[node name="LowerTotalLabel" type="Label" parent="HBoxContainer/LowerVBoxContainer/LowerGridContainer/LowerTotal"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
vertical_alignment = 1

[node name="BestHandScore" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
offset_left = -254.0
offset_top = 211.0
offset_right = -1.0
offset_bottom = 377.0
bbcode_enabled = true
fit_content = true

[node name="RichTextTotalScore" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -251.0
offset_top = 76.0
offset_right = -2.0
offset_bottom = 230.0
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
vertical_alignment = 1

[node name="ExtraInfo" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
offset_left = -250.0
offset_top = 4.0
offset_right = -5.0
offset_bottom = 78.0
bbcode_enabled = true
fit_content = true
